FlightPath 4.x Changelog
========================

2015-11-02
  Removed errant fpm() statement left in accidentally in _Student.php

  Added ability to assign courses to more than one degree (not group, yet).
  
  Added extra CSS to highlight when a course is assigned to more than one degree.  

2015-11-01
  Fixed bug where groups were not fully populating during group_clone.
  
  Added concept of courses being assigned to more than one degree.  Edited AdvisingScreen object to reflect which
  degree the course was assigned to.
  
  Continued working on combining degree logic.

  
2015-10-31
  Added settings to School Data form in system.module, so we can set up "classifications" of majors.  Edited the admin.degrees.inc file to use these new options,
  added function to misc.inc to get all the options as an array for ease of use.
  

2015-10-30
  Working on AdvisingScreen object, to display what degrees each requirement comes from.  Added new property to Course and Group objects, to track what
  degree id they were originally required by.
  

2015-10-29
  Changed the error_reporting default in install.php, during a new install.
  
  Modified theme.inc to tell us what degrees are being applied.
  
  

2015-10-27
  Added get_clone() function to _GroupList, in continuing to work on combining degree plans.  Also added add_list function, both similar to
  functions in the CourseList object.


2015-10-26
  Adding "student_degrees" table, so we can keep up with more than one major_code per student.  Still going to call them major_codes, to maintain
  backwards compatibility.
  
  Added get_student_majors_from_db function to look at the student_degrees table to get a list of major codes.
  In this effort, modified _DatabaseHandler.php and _Student.php.  Also advise.module.  Also _FlightPath.php
  Added new function to _DegreePlan to let me more easily find semesters by number.


2015-10-24